# TCP-client-server

./: .gitignore  CMakeLists.txt  README.md
include/: crypto.h  tcp.h  util.h
src/: client.c  crypto.c  keygen.c  server.c  tcp.c  util.c
